--- a/app/templates/components/app-navbar.hbs
+++ b/app/templates/components/app-navbar.hbs
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#"><i class="mdi">code</i> DevTools</a></h1>
+      <h1>{{#link-to 'application'}}<i class="mdi">code</i> DevTools{{/link-to}}</h1>
     </li>
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
