--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,5 +6,11 @@
     <a href="http://twitter.com/blaz_boy">@blaz_boy</a> &middot;
     <a href="http://github.com/blazeeboy/devtools">Github</a>
   </div>
+  <div class="apps">
+    <hr/>
+    <a href="https://chrome.google.com/webstore/detail/<devtools>/cdbkgimlplnofejbnolajdkpppadpklb">
+      <img src="/assets/images/available_on_chrome_store.png" alt="Available on chrome store" />
+    </a>
+  </div>
 
 </div>
