--- a/app/templates/components/app-navbar.hbs
+++ b/app/templates/components/app-navbar.hbs
@@ -5,4 +5,13 @@
     </li>
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="active"><a href="#" onclick="TogetherJS(this); return false;">Share Screen</a></li>
+    </ul>
+
+  </section>
+
 </nav>
