--- a/app/templates/components/app-navbar.hbs
+++ b/app/templates/components/app-navbar.hbs
@@ -9,7 +9,7 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#" onclick="TogetherJS(this); return false;">Share Screen</a></li>
+      <li class="active"><a href="#" onclick="TogetherJS(this); return false;"><i class="mdi">share</i> Share Screen</a></li>
     </ul>
 
   </section>
