#8 textarea will have an open file feature as long as the content doesn't exceed 100 characters

--- a/app/templates/html-js-css-sandbox.hbs
+++ b/app/templates/html-js-css-sandbox.hbs
@@ -5,13 +5,13 @@
 
 <div class="row">
   <div class="columns medium-4">
-    {{textarea value=html placeholder="HTML" rows="15"}}
+    {{devtools-textarea value=html placeholder="HTML" rows="15"}}
   </div>
   <div class="columns medium-4">
-    {{textarea value=css placeholder="CSS" rows="15"}}
+    {{devtools-textarea value=css placeholder="CSS" rows="15"}}
   </div>
   <div class="columns medium-4">
-    {{textarea value=js placeholder="Javascript" rows="15"}}
+    {{devtools-textarea value=js placeholder="Javascript" rows="15"}}
   </div>
 </div>
 <div class="row">
