--- a/app/templates/markdown.hbs
+++ b/app/templates/markdown.hbs
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="large-6 columns">
-    {{textarea value=markdownText placeholder="Markdown text" rows="20"}}
+    {{devtools-textarea value=markdownText placeholder="Markdown text" rows="20"}}
   </div>
   <div class="large-6 columns">
     {{{htmlText}}}
