--- a/app/templates/md5-encoder.hbs
+++ b/app/templates/md5-encoder.hbs
@@ -4,7 +4,7 @@
 </h3>
 
 <label>Input string (input)</label>
-{{textarea value=inputText placeholder="Input text" rows=10}}
+{{devtools-textarea value=inputText placeholder="Input text" rows=10}}
 
 <label>HMAC-MD5 key (optional) (input)</label>
 {{input value=HMACKey}}
