--- a/app/templates/minify-sql.hbs
+++ b/app/templates/minify-sql.hbs
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="large-6 columns">
     <label>SQL (input)</label>
-    {{textarea value=inputText placeholder="Input SQL" rows=20}}
+    {{devtools-textarea value=inputText placeholder="Input SQL" rows=20}}
   </div>
   <div class="large-6 columns">
     <label>Minified SQL (output)</label>
