--- a/app/templates/pretty-print-css.hbs
+++ b/app/templates/pretty-print-css.hbs
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="large-6 columns">
     <label>CSS (input)</label>
-    {{textarea value=inputText placeholder="Input CSS" rows=20}}
+    {{devtools-textarea value=inputText placeholder="Input CSS" rows=20}}
   </div>
   <div class="large-6 columns">
     <label>Pretty CSS (output)</label>
