--- a/app/templates/autoprefixer.hbs
+++ b/app/templates/autoprefixer.hbs
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="large-6 columns">
     <label>CSS (input)</label>
-    {{textarea value=inputText placeholder="Input CSS" rows=20}}
+    {{devtools-textarea value=inputText placeholder="Input CSS" rows=20}}
     <div class="form-group">
       <label for="browsers">
         Browsers
