--- a/app/templates/minify-json.hbs
+++ b/app/templates/minify-json.hbs
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="large-6 columns">
     <label>JSON (input)</label>
-    {{textarea value=inputText placeholder="Input JSON" rows=20}}
+    {{devtools-textarea value=inputText placeholder="Input JSON" rows=20}}
   </div>
   <div class="large-6 columns">
     <label>Minified JSON (output)</label>
