--- a/app/templates/minify-xml.hbs
+++ b/app/templates/minify-xml.hbs
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="large-6 columns">
     <label>XML (input)</label>
-    {{textarea value=inputText placeholder="Input XML" rows=20}}
+    {{devtools-textarea value=inputText placeholder="Input XML" rows=20}}
     <label for="preserveComments">
       {{input type="checkbox" name="preserveComments" checked=preserveComments}}
       Preserve Comments
