--- a/app/templates/pretty-print-xml.hbs
+++ b/app/templates/pretty-print-xml.hbs
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="large-6 columns">
     <label>XML (input)</label>
-    {{textarea value=inputText placeholder="Input XML" rows=20}}
+    {{devtools-textarea value=inputText placeholder="Input XML" rows=20}}
   </div>
   <div class="large-6 columns">
     <label>Pretty XML (output)</label>
