--- a/app/styles/components/devtools-textarea.scss
+++ b/app/styles/components/devtools-textarea.scss
@@ -14,4 +14,11 @@
   	position: absolute;
   	z-index: -1;
   }
+
+
+  .length-field{
+    color: #999999;
+    margin-top: -15px;
+    margin-bottom: 15;
+  }
 }
