--- a/app/styles/components/devtools-textarea.scss
+++ b/app/styles/components/devtools-textarea.scss
@@ -1,9 +1,13 @@
 .devtools-textarea{
   .notifier{
     color: #ccc;
-    margin-top: -50px;
-    margin-bottom: 50px;
+    margin-top: -35px;
+    margin-bottom: 35px;
     margin-left: 10px;
+  }
+
+  textarea{
+    margin-bottom: 0px;
   }
 
   input[type=file]{
@@ -15,10 +19,8 @@
   	z-index: -1;
   }
 
-
   .textarea-length{
     color: #999999;
-    margin-top: -15px;
-    margin-bottom: 15px;
+    margin-bottom: $form-spacing;
   }
 }
