--- a/app/templates/components/devtools-textarea.hbs
+++ b/app/templates/components/devtools-textarea.hbs
@@ -1,5 +1,5 @@
 {{textarea rows=rows cols=cols placeholder=placeholder name=name selectionEnd=selectionEnd selectionStart=selectionStart wrap=wrap lang=lang dir=dir value=value}}
-<div class="textarea-length right">Length : {{textLength}}</div>
+<div class="textarea-length right">{{textLength}}</div>
 {{#if showNotifier}}
   <div class="notifier">
     <form>
