Escaping the content of the fileID variable

--- a/app/templates/components/devtools-textarea.hbs
+++ b/app/templates/components/devtools-textarea.hbs
@@ -4,7 +4,7 @@
   <div class="notifier">
     <form>
       {{devtools-file value=value name="uploader" id=fileID}}
-      <label for={{fileID}} >
+      <label for="{{fileID}}" >
         <i class="mdi">insert_drive_file</i> Open a file
       </label>
     </form>
