--- a/app/templates/components/devtools-textarea.hbs
+++ b/app/templates/components/devtools-textarea.hbs
@@ -1,12 +1,12 @@
 {{textarea rows=rows cols=cols placeholder=placeholder name=name selectionEnd=selectionEnd selectionStart=selectionStart wrap=wrap lang=lang dir=dir value=value}}
-<div class="textarea-length right">{{textLength}}</div>
-{{#if showNotifier}}
-  <div class="notifier">
+
+<div class="tools">
     <form>
       {{devtools-file value=value name="uploader" id=fileID}}
-      <label for="{{fileID}}" >
-        <i class="mdi">insert_drive_file</i> Open a file
+      <label for="{{fileID}}" title="Open file...">
+        <i class="mdi">insert_drive_file</i>
       </label>
     </form>
-  </div>
-{{/if}}
+    <label onclick={{action "selectAll"}} title="Select all"><i class="mdi">select_all</i></label>
+  <div class="textarea-length right">{{textLength}}</div>
+</div>
