--- a/app/templates/components/app-sidebar-item.hbs
+++ b/app/templates/components/app-sidebar-item.hbs
@@ -1,3 +1,5 @@
-{{#link-to route.route tagName='li' href='#'}}
-  {{#link-to route.route }}<i class="mdi">code</i> {{titlize route.label}}{{/link-to}}
-{{/link-to}}
+{{#if route }}
+  {{#link-to route.route tagName='li' href='#'}}
+    {{#link-to route.route }}<i class="mdi">code</i> {{titlize route.label}}{{/link-to}}
+  {{/link-to}}
+{{/if}}
