#8 add copy, cut actions to textarea component

--- a/app/templates/components/devtools-textarea.hbs
+++ b/app/templates/components/devtools-textarea.hbs
@@ -8,5 +8,7 @@
       </label>
     </form>
     <label onclick={{action "selectAll"}} title="Select all"><i class="mdi">select_all</i></label>
+    <label class="copy-btn" title="Copy to clipboard"><i class="mdi">content_copy</i></label>
+    <label class="cut-btn" title="Cut to clipboard"><i class="mdi">content_cut</i></label>
   <div class="textarea-length right">{{textLength}}</div>
 </div>
