--- a/app/templates/autoprefixer.hbs
+++ b/app/templates/autoprefixer.hbs
@@ -5,7 +5,7 @@
     <a href="https://github.com/Ebram-Tharwat">Ebram Tharwat</a></small>
 </h3>
 
-<div class="row">
+<div class="row full-width">
   <div class="large-6 columns">
     <label>CSS (input)</label>
     {{devtools-textarea value=inputText placeholder="Input CSS" rows=20}}
