--- a/app/templates/html-js-css-sandbox.hbs
+++ b/app/templates/html-js-css-sandbox.hbs
@@ -3,7 +3,7 @@
   <small>By <a href="https://github.com/blazeeboy" target="_blank">Emad Elsaid</a></small>
 </h3>
 
-<div class="row">
+<div class="row full-width">
   <div class="columns medium-4">
     {{devtools-textarea value=html placeholder="HTML" rows="15"}}
   </div>
