--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -52,7 +52,7 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // This is the default html and body font-size for the base rem value.
-// $rem-base: 16px;
+$rem-base: 17px;
 
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import 'foundation/functions';
@@ -81,7 +81,7 @@ $include-html-global-classes: $include-html-classes;
 
 // $row-width: rem-calc(1000);
 // $total-columns: 12;
-// $column-gutter: rem-calc(30);
+$column-gutter: rem-calc(5);
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
