--- a/app/templates/markdown.hbs
+++ b/app/templates/markdown.hbs
@@ -3,7 +3,7 @@
   <small>By <a href="https://github.com/evilstreak/markdown-js" target="_blank">Evilstreak</a></small>
 </h3>
 
-<div class="row">
+<div class="row full-width">
   <div class="large-6 columns">
     {{devtools-textarea value=markdownText placeholder="Markdown text" rows="20"}}
   </div>
