--- a/app/templates/pretty-print-css.hbs
+++ b/app/templates/pretty-print-css.hbs
@@ -3,7 +3,7 @@
   <small>By <a href="https://github.com/vkiryukhin/pretty-data" target="_blank">Vkiryukhin</a></small>
 </h3>
 
-<div class="row">
+<div class="row full-width">
   <div class="large-6 columns">
     <label>CSS (input)</label>
     {{devtools-textarea value=inputText placeholder="Input CSS" rows=20}}
