add download button to topbar

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,6 +3,7 @@
 @import "mdi";
 @import "commons";
 @import "sidebar";
+@import "app-navbar";
 @import "application";
 @import "index";
 @import "sandbox";
