--- a/app/templates/components/app-navbar.hbs
+++ b/app/templates/components/app-navbar.hbs
@@ -9,6 +9,11 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
+      <li class="chrome-download">
+        <a href="https://chrome.google.com/webstore/detail/<devtools>/cdbkgimlplnofejbnolajdkpppadpklb">
+          <img src="images/available_on_chrome_store_noframe.png" alt="Available on chrome store" />
+        </a>
+      </li>
       <li class="active"><a href="#" onclick="TogetherJS(this); return false;"><i class="mdi">share</i> Share Screen</a></li>
     </ul>
 
