--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,5 +6,5 @@
 @import "app-navbar";
 @import "application";
 @import "index";
-@import "sandbox";
 @import "components/components";
+@import "tools/tools";
