--- a/app/templates/html-js-css-sandbox.hbs
+++ b/app/templates/html-js-css-sandbox.hbs
@@ -14,6 +14,6 @@
     {{devtools-textarea value=js placeholder="Javascript" rows="15"}}
   </div>
 </div>
-<div class="row">
+<div class="row full-width">
   <iframe src="sandbox.html" frameborder="0" class="result column small-12"></iframe>
 </div>
