--- a/app/styles/_application.scss
+++ b/app/styles/_application.scss
@@ -1,7 +1,6 @@
 $aside-width: 300px;
 
 .container{
-
   aside{
     float: left;
     width: $aside-width;
@@ -9,11 +8,19 @@ $aside-width: 300px;
     height: 100%;
     background-color: #eee;
     border-right: 1px solid darken(#eee, 10%);
+    z-index: 1000;
   }
   section.body{
     padding-left: $aside-width;
+
     .container{
       padding: rem-calc(10);
+
+      h3{
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+        border-bottom: 1px solid $gainsboro;
+      }
     }
   }
 }
