Add credit to darkroomjs developer

--- a/app/templates/image-editor.hbs
+++ b/app/templates/image-editor.hbs
@@ -1,6 +1,9 @@
 <h3>
   Image Editor
-  <small>By <a href="https://github.com/blazeeboy" target="_blank">Emad Elsaid</a></small>
+  <small>By
+    <a href="https://github.com/MattKetmo" target="_blank">Matthieu Moquet</a>, 
+    <a href="https://github.com/blazeeboy" target="_blank">Emad Elsaid</a>
+  </small>
 </h3>
 
 <div class="row full-width">
