change names of contributors to github images

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1377,7 +1377,7 @@ $column-gutter: rem-calc(5);
 // $has-tip-font-color: $oil;
 // $has-tip-border-bottom-hover: dotted 1px scale-color($primary-color, $lightness: -55%);
 // $has-tip-font-color-hover: $primary-color;
-// $has-tip-cursor-type: help;
+$has-tip-cursor-type: inherit;
 
 // $tooltip-padding: rem-calc(12);
 // $tooltip-bg: $oil;
