--- a/app/templates/autoprefixer.hbs
+++ b/app/templates/autoprefixer.hbs
@@ -1,8 +1,9 @@
 <h3>
   Autoprefixer CSS
   <small>By
-    <a href="https://github.com/ai" target="_blank">Andrey Sitnik</a>,
-    <a href="https://github.com/Ebram-Tharwat">Ebram Tharwat</a></small>
+    {{github-image user='ai' name='Andrey Sitnik'}}
+    {{github-image user='Ebram-Tharwat' name='Ebram Tharwat'}}
+  </small>
 </h3>
 
 <div class="row full-width">
