--- a/app/templates/html-js-css-sandbox.hbs
+++ b/app/templates/html-js-css-sandbox.hbs
@@ -1,6 +1,8 @@
 <h3>
   HTML CSS JS Sandbox
-  <small>By <a href="https://github.com/blazeeboy" target="_blank">Emad Elsaid</a></small>
+  <small>By
+    {{github-image user='blazeeboy' name='Emad Elsaid'}}
+  </small>
 </h3>
 
 <div class="row full-width">
