--- a/app/templates/image-editor.hbs
+++ b/app/templates/image-editor.hbs
@@ -1,8 +1,8 @@
 <h3>
   Image Editor
   <small>By
-    <a href="https://github.com/MattKetmo" target="_blank">Matthieu Moquet</a>, 
-    <a href="https://github.com/blazeeboy" target="_blank">Emad Elsaid</a>
+    {{github-image user='MattKetmo' name='Matthieu Moquet'}}
+    {{github-image user='blazeeboy' name='Emad Elsaid'}}
   </small>
 </h3>
 
