--- a/app/templates/markdown.hbs
+++ b/app/templates/markdown.hbs
@@ -1,6 +1,9 @@
 <h3>
   Markdown Preview
-  <small>By <a href="https://github.com/evilstreak/markdown-js" target="_blank">Evilstreak</a></small>
+
+  <small>By
+    {{github-image name='Evilstreak' user='evilstreak'}}
+  </small>
 </h3>
 
 <div class="row full-width">
