--- a/app/templates/md5-encoder.hbs
+++ b/app/templates/md5-encoder.hbs
@@ -1,6 +1,8 @@
 <h3>
   MD5 Encoder
-  <small>By <a href="https://github.com/blueimp/JavaScript-MD5" target="_blank">Blueimp</a></small>
+  <small>By
+    {{github-image user='blueimp' name='Blueimp'}}
+  </small>
 </h3>
 
 <label>Input string (input)</label>
