--- a/app/templates/number-systems-calculator.hbs
+++ b/app/templates/number-systems-calculator.hbs
@@ -1,6 +1,8 @@
 <h3>
   Number Systems Calculator
-  <small>By <a href="https://github.com/blazeeboy" target="_blank">Emad Elsaid</a></small>
+  <small>By
+    {{github-image name='Emad Elsaid' user='blazeeboy'}}
+  </small>
 </h3>
 
 <label>Binary</label>
