--- a/app/templates/minify-sql.hbs
+++ b/app/templates/minify-sql.hbs
@@ -1,6 +1,8 @@
 <h3>
   Minify SQL
-  <small>By <a href="https://github.com/vkiryukhin/pretty-data" target="_blank">Vkiryukhin</a></small>
+  <small>By
+    {{github-image user='Vkiryukhin'}}
+  </small>
 </h3>
 
 <div class="row full-width">
