Add animation to route transitions

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
   </aside>
   <section class="body">
     <div class="container">
-      {{outlet}}
+      {{liquid-outlet class="toleft"}}
     </div>
   </section>
 </div>
