changing sidebar style

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -116,7 +116,7 @@ $column-gutter: rem-calc(5);
 // $black       : #000000;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
+$primary-color: #0294dd;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -124,7 +124,7 @@ $column-gutter: rem-calc(5);
 // $info-color: #a0d3e8;
 
 // We use these to control various global styles
-// $body-bg: $white;
+// $body-bg: white;
 // $body-font-color: $jet;
 // $body-font-family: $font-family-sans-serif;
 // $body-font-weight: $font-weight-normal;
@@ -1400,7 +1400,7 @@ $has-tip-cursor-type: inherit;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: $oil;
+$topbar-bg-color: #31383e;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
