--- a/app/styles/_application.scss
+++ b/app/styles/_application.scss
@@ -21,4 +21,14 @@ $aside-width: 300px;
       }
     }
   }
+
+  &.hidden-sidebar{
+    aside{
+      display: none;
+    }
+
+    section.body{
+      padding-left: inherit;
+    }
+  }
 }
