#2 hex editor can edit file with any radix from 2 to 36

--- a/app/styles/_commons.scss
+++ b/app/styles/_commons.scss
@@ -9,3 +9,13 @@
   color: #ccc;
   font-size: 0.8em;
 }
+.code{
+  font-family: monospace;
+}
+.toolbar{
+  a, label{
+    color: inherit;
+    font-size: $form-label-font-size;
+    color: $form-label-font-color;
+  }
+}
