add a consistent way to have titles for each tool and show authors in topbar

--- a/app/styles/_app-navbar.scss
+++ b/app/styles/_app-navbar.scss
@@ -7,4 +7,15 @@
       }
     }
   }
+  li.route{
+    display: none;
+    &.active{
+      background-color: transparent !important;
+      display:inherit;
+
+      a{
+        background-color: transparent !important;
+      }
+    }
+  }
 }
