--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{app-navbar sidebar=sidebar}}
+{{app-navbar sidebar=sidebar authors=authors}}
 <div class="container {{if sidebar '' 'hidden-sidebar'}}">
   <aside>
     {{app-sidebar}}
