--- a/app/templates/components/app-sidebar-item.hbs
+++ b/app/templates/components/app-sidebar-item.hbs
@@ -1,5 +1,5 @@
 {{#if route }}
-  {{#link-to route.route tagName='li' href='#'}}
-    {{#link-to route.route }}<i class="mdi">code</i> {{titlize route.label}}{{/link-to}}
+  {{#link-to route tagName='li' href='#'}}
+    {{#link-to route }}<i class="mdi">code</i> {{titlize route}}{{/link-to}}
   {{/link-to}}
 {{/if}}
