--- a/app/styles/_application.scss
+++ b/app/styles/_application.scss
@@ -1,4 +1,5 @@
 $aside-width: 300px;
+$aside-animation-duration: 0.5s;
 
 .container{
   aside{
@@ -7,9 +8,11 @@ $aside-width: 300px;
     position: fixed;
     height: 100%;
     z-index: 1000;
+    transition: $aside-animation-duration all;
   }
   section.body{
     padding-left: $aside-width;
+    transition: $aside-animation-duration padding-left;
 
     .container{
       padding: rem-calc(10);
@@ -24,7 +27,7 @@ $aside-width: 300px;
 
   &.hidden-sidebar{
     aside{
-      display: none;
+      margin-left: - $aside-width;
     }
 
     section.body{
