add fork, star, follow buttons

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,8 +3,9 @@
    Welcome to DevTools ,a set of simple tools every developer needs, we collected them in
   one application.
   <div class="links">
-    <a href="http://twitter.com/blaz_boy">@blaz_boy</a> &middot;
-    <a href="http://github.com/blazeeboy/devtools">Github</a>
+    <iframe src="https://ghbtns.com/github-btn.html?user=blazeeboy&type=follow&count=true" frameborder="0" scrolling="0" width="175px" height="20px"></iframe>
+    <iframe src="https://ghbtns.com/github-btn.html?user=blazeeboy&repo=devtools&type=star&count=true" frameborder="0" scrolling="0" width="85px" height="20px"></iframe>
+    <iframe src="https://ghbtns.com/github-btn.html?user=blazeeboy&repo=devtools&type=fork&count=true" frameborder="0" scrolling="0" width="85px" height="20px"></iframe>
   </div>
   <div class="apps">
     <hr/>
